# Manuscript

./: README.md  com.github.molnarandris.latexeditor.json  com.github.molnarandris.manuscript.json  meson.build
data/: com.github.molnarandris.latexeditor.desktop.in  com.github.molnarandris.latexeditor.gschema.xml  com.github.molnarandris.latexeditor.metainfo.xml.in  com.github.molnarandris.latexeditor.service.in  com.github.molnarandris.manuscript.desktop.in  com.github.molnarandris.manuscript.gschema.xml  com.github.molnarandris.manuscript.metainfo.xml.in  com.github.molnarandris.manuscript.service.in  meson.build
data/completion/: latex-mathsymbols.cwl
data/css/: style.css
data/gtksource/languages/: mylatex.lang
data/gtksource/style/: manuscript-classic.xml
data/icons/: meson.build
data/styles/: latexeditor-classic.xml
po/: POTFILES.in  meson.build
src/: application.vala  compiler.vala  completion.vala  editor.blp  editor.vala  latexeditor.gresource.xml  latexfile.vala  main.vala  manuscript.gresource.xml  meson.build  pdfdocument.vala  pdfpage.vala  pdfpane.blp  pdfpane.vala  pdfviewer.blp  pdfviewer.vala  preferences-dialog.blp  preferences-dialog.vala  right-pane.blp  right-pane.vala  shortcuts-dialog.blp  synctex.vala  window.blp  window.ui  window.vala
